--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
     "autod": "autod",
-    "pm2": "pm2 start server.js --name=platform-corp",
+    "pm2": "pm2 start",
     "restart": "pm2 restart platform-corp"
   },
   "ci": {
